--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -648,13 +648,14 @@ process a copy of your sources.
 
 You can now provide \<project-stubs> as a stub directory using \<-Astubs=project-stubs> as
 an additional command-line option.
-You can also concatenate all minimized \<.java> files into a single \<.astub> file:
+
+If you wish to use a single stub file, rather than a stub directory,
+you can concatenate all the minimized \<.java> files into a single \<.astub> file:
 
 \begin{Verbatim}
 find project-stubs/ -name "*.java" -type f | xargs cat > project.astub
 \end{Verbatim}
 
-and then pass just that single file.
 % That file will contain many non-unique import statements, but that shouldn't be harmful.
 
 
