--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1670,13 +1670,7 @@ following two lines at the beginning of the constructor for your subtype of
 
 You will need to supply annotations for relevant parts of the JDK;
 otherwise, your type-checker may produce spurious warnings for code that
-uses the JDK\@.  You need to write your annotations twice:  once for JDK 8
-and once for JDK 11.
-
-For JDK 11, write your annotations in
-\url{https://github.com/typetools/jdk}.
-
-For JDK 8, as described in Section~\ref{annotating-libraries}, you can
+uses the JDK\@.  As described in Section~\ref{annotating-libraries}, you can
 supply annotations in Java files that will be compiled to \<.class> files,
 or as stub files (partial Java source files).
 It's easier to start out with stub files.  If you need to annotate many
