--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -553,11 +553,8 @@ available in \<org.checkerframework.annotatedlib>, then
 % running your code, you can use either the annotated library or the regular
 % distributed version of the library --- they behave identically.
 
-There are two special cases.
+There is one special case.
 \begin{itemize}
-\item
-The annotated JDK is automatically put on your
-classpath; you don't have to do anything special for it.
 \item
 For the Javadoc classes in the JDK's \<com.sun.javadoc> package,
 % are not exposed by ct.sym and therefore cannot be part of an
