--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 ---------------------------------------------------------------------------
 
+Version 3.4.0, May 1, 2020
+
+The annotated jdk8.jar is no longer used.  You can remove any occurrence of
+  -Xbootclasspath/p:.../jdk8.jar
+from your build scripts.
+
+---------------------------------------------------------------------------
+
 Version 3.3.0, April 1, 2020
 
 New command-line options:
