--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -327,14 +327,14 @@ It assumes that you have already followed the instructions for building the
 Checker Framework from source (Section~\ref{build-source}).
 
 Edit files in repository \url{https://github.com/typetools/jdk}.  Add
-@AnnotatedFor() to each file you annotate.
+an \<@AnnotatedFor()> annotation to each file you annotate.
 
 Whenever you add a file, fully annotate it, as described in
 Section~\ref{library-tips}.
 
 If you are only annotating fields and method signatures (but not
 ensuring that method bodies type-check), then you don't need to suppress
-warnings, because the JDK it not type-checked.
+warnings, because the JDK is not type-checked.
 
 
 \sectionAndLabel{Compiling partially-annotated libraries}{compiling-libraries}
