Edits from code review

--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -671,7 +671,7 @@ maintainers' time to evaluate and fix.
 
 \subsectionAndLabel{Problems with annotated libraries}{reporting-bugs-annotated-libraries}
 
-Sometimes, a checker will report a warning because a library is not
+Sometimes, a checker reports a warning because a library is not
 annotated or because the library contains incorrect annotations.
 Please do not open GitHub issues for these.
 Instead, we appreciate pull requests to help us improve the annotations.
