--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -315,16 +315,14 @@ This section describes how to create an annotated library.
 
 \sectionAndLabel{Creating an annotated JDK}{annotating-jdk}
 
-This section tells how to create an annotated JDK for a new type system.
-Section~\ref{reporting-bugs-annotated-libraries} tells how to improve
-annotations for the JDK for an existing type system.
-
 When you create a new checker, you need to also supply annotations for
-parts of the JDK, either as stub files or as source code that will be
-compiled and its annotations inserted into the JDK\@.  This
+parts of the JDK\@.  You can do so either as stub files or in a copy of the
+JDK source code.  This
 section describes the latter approach.
 It assumes that you have already followed the instructions for building the
 Checker Framework from source (Section~\ref{build-source}).
+(Section~\ref{reporting-bugs-annotated-libraries} tells how to improve
+JDK annotations for an existing type system.)
 
 Edit files in repository \url{https://github.com/typetools/jdk}.  Add
 an \<@AnnotatedFor()> annotation to each file you annotate.
