--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1675,7 +1675,7 @@ uses the JDK\@.  You have two options:
 \begin{itemize}
 \item
   Write JDK annotations in a fork of
-  \url{https://github.com/typetools/jdk}
+  \url{https://github.com/typetools/jdk}.
 \item
   Write JDK annotations as stub files (partial Java source files).
   Create a file \<jdk.astub> in
