--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -485,6 +485,7 @@ Checker Framework looks up the library's annotations in its class files.
 
 Some projects are already distributed with type annotations by their
 maintainers, so you do not need to do anything special.
+An example is all the libraries in \url{https://github.com/plume-lib/}.
 Over time, this should become more common.
 
 For some other libraries, the Checker Framework developers have provided an
@@ -493,8 +494,8 @@ The annotated libraries appear in
 \ahref{https://search.maven.org/search?q=org.checkerframework.annotatedlib}{the
   \<org.checkerframework.annotatedlib> group in the Central Repository}.
 The annotated library has \emph{identical} behavior to the upstream,
-unannotated version; the source code is identical other than the
-annotations are different.
+unannotated version; the source code is identical other than added
+annotations.
 %
 (Some of the annotated libraries are
 % This list appears here to make it searchable/discoverable.
@@ -537,7 +538,7 @@ to
 \end{Verbatim}
 
 \noindent
-Use the same version number.  (Sometimes you will use a slightly larger
+Usually use the same version number.  (Sometimes you will use a slightly larger
 number, if the Checker Framework developers have improved the type
 annotations since the last release by the upstream maintainers.)  If a
 newer version of the upstream library is available but that version is not
