More updates from code review

--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -742,6 +742,6 @@ read whether the library's annotations are parsed.
 %%  LocalWords:  TypeSystem2 TypeSystem3 AuseConservativeDefaultsForUncheckedCode ln
 %  LocalWords:  mychecker DIRS README TypeSystem un debugJSR org boolean
 %  LocalWords:  AstubWarnIfOverwritesBytecode Awarns AssumeAssertion
-%%  LocalWords:  Makefile buildJdk PuseLocalJdk jdkShaHash AonlyDefs
+%%  LocalWords:  Makefile PuseLocalJdk jdkShaHash AonlyDefs
 %%  LocalWords:  AuseConservativeDefaultsForUncheckedCodesource
 %%  LocalWords:  AstubWarnIfNotFoundIgnoresClasses
