--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -866,7 +866,7 @@ checker as an annotation processor directly.
       <artifactId>checker-qual</artifactId>
       <version>\ReleaseVersion{}</version>
     </dependency>
-    <!-- If using JDK 8, add the following additional dependencies -->
+    <!-- If using JDK 8, add the following additional dependency. -->
     <dependency>
       <groupId>com.google.errorprone</groupId>
       <artifactId>javac</artifactId>
