--- a/docs/manual/returns-receiver-checker.tex
+++ b/docs/manual/returns-receiver-checker.tex
@@ -39,16 +39,14 @@ As is standard, the Returns Receiver Checker has a top qualifier,
 \refqualclass{common/returnsreceiver/qual}{BottomThis}.
 Programmers rarely need to write these annotations.
 
-Here are additional details.
-\refqualclass{common/returnsreceiver/qual}{This}
-is a polymorphic qualifier rather than a regular type qualifier.
-When the Returns Receiver Checker observes an
-\refqualclass{common/returnsreceiver/qual}{This} annotation on a method return type,
-it adds \refqualclass{common/returnsreceiver/qual}{This} to
-the method's receiver type. The presence of the polymorphic annotation
-\refqualclass{common/returnsreceiver/qual}{This} on both the method's return and
-receiver type forces their type qualifiers to be \emph{equal}.  Hence, the
-method will only pass the type checker if it returns its receiver argument,
+Here are additional details.  \refqualclass{common/returnsreceiver/qual}{This}
+is a polymorphic qualifier rather than a regular type qualifier ((see
+Section~\ref{qualifier-polymorphism}). Conceptually, a receiver type always has
+an \refqualclass{common/returnsreceiver/qual}{This} qualifier. When a method
+return type also has an \refqualclass{common/returnsreceiver/qual}{This}
+qualifier, The presence of the polymorphic annotation on both the method's
+return and receiver type forces their type qualifiers to be \emph{equal}. Hence,
+the method will only pass the type checker if it returns its receiver argument,
 achieving the desired checking.
 
 
