--- a/docs/manual/returns-receiver-checker.tex
+++ b/docs/manual/returns-receiver-checker.tex
@@ -44,7 +44,7 @@ is a polymorphic qualifier rather than a regular type qualifier ((see
 Section~\ref{qualifier-polymorphism}). Conceptually, a receiver type always has
 an \refqualclass{common/returnsreceiver/qual}{This} qualifier. When a method
 return type also has an \refqualclass{common/returnsreceiver/qual}{This}
-qualifier, The presence of the polymorphic annotation on both the method's
+qualifier, the presence of the polymorphic annotation on both the method's
 return and receiver type forces their type qualifiers to be \emph{equal}. Hence,
 the method will only pass the type checker if it returns its receiver argument,
 achieving the desired checking.
