tweak to manual

--- a/docs/manual/returns-receiver-checker.tex
+++ b/docs/manual/returns-receiver-checker.tex
@@ -32,7 +32,7 @@ class MyBuilder {
 \end{Verbatim}
 
 An \refqualclass{common/returnsreceiver/qual}{This} annotation can only be
-written on the return type of a method or in a downcast.
+written on a return type, a receiver type, or in a downcast.
 
 As is standard, the Returns Receiver Checker has a top qualifier,
 \refqualclass{common/returnsreceiver/qual}{UnknownThis}, and a bottom qualifier,
