--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1794,6 +1794,9 @@ in LSP (Language Server Protocol) format.
 \item \code{-ApermitMissingJdk}:
   don't issue an error if no annotated JDK can be found.
 
+\item \code{-AparseAllJdk}:
+  parse all JDK files at startup rather than as needed.
+
 \item \code{-AstubDebug}:
   Print debugging messages while processing stub files.
 
