--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1666,7 +1666,7 @@ following two lines at the beginning of the constructor for your subtype of
 \end{Verbatim}
 
 
-\sectionAndLabel{Annotated JDK}{creating-a-checker-annotated-jdk}
+\sectionAndLabel{Annotated JDK and other annotated libraries}{creating-a-checker-annotated-jdk}
 
 You will need to supply annotations for relevant parts of the JDK;
 otherwise, your type-checker may produce spurious warnings for code that
