--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,11 @@
-Version 3.4.0, May 1, 2020
+Version 3.4.0, May 3, 2020
+
+The annotated jdk8.jar is no longer used.  You should remove any occurrence of
+  -Xbootclasspath/p:.../jdk8.jar
+from your build scripts.
 
 The Returns Receiver Checker enables documenting and checking that a method
 returns its receiver (i.e., the `this` parameter).
-
----------------------------------------------------------------------------
-
-Version 3.4.0, May 1, 2020
-
-The annotated jdk8.jar is no longer used.  You can remove any occurrence of
-  -Xbootclasspath/p:.../jdk8.jar
-from your build scripts.
 
 ---------------------------------------------------------------------------
 
