Address javadoc.astub.

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -557,7 +557,7 @@ available in \<org.checkerframework.annotatedlib>, then
 There is one special case.
 \begin{itemize}
 \item
-For the Javadoc classes in the JDK's \<com.sun.javadoc> package,
+For the Java 8 version of the Javadoc classes in the JDK's \<com.sun.javadoc> package,
 % are not exposed by ct.sym and therefore cannot be part of an
 % annotated JDK
 use the stub file \<checker/resources/javadoc.astub> by using \<-Astubs=checker.jar/javadoc.astub>.
