address some code review comments

--- a/docs/manual/accumulation-checker.tex
+++ b/docs/manual/accumulation-checker.tex
@@ -36,7 +36,7 @@ support for accumulation analysis requires you to accumulate a string representa
 of whatever you are accumulating. For example, when accumulating which methods have
 been called on an object, you might choose to accumulate method names.
 
-Define a type qualifier that with a single argument: a \<String[]> named \<value>.
+Define a type qualifier that has a single argument: a \<String[]> named \<value>.
 Choose a descriptive name for the qualifier that suggests what is being accumulated.
 An example of such a qualifier can be found in the Checker Framework's tests, at
 \<$CHECKERFRAMEWORK/framework/src/test/java/testaccumulation/qual/TestAccumulation.java>.
