Edits to manual

--- a/docs/manual/manual.tex
+++ b/docs/manual/manual.tex
@@ -86,6 +86,7 @@ describes how to \textbf{install and use} pluggable type-checkers.
 \input{inference.tex}
 \input{annotating-libraries.tex}
 \input{creating-a-checker.tex}
+%\input{accumulation-checker.tex}
 \input{external-tools.tex}
 \input{faq.tex}
 \input{troubleshooting.tex}
