make explicit the requirements on the top and bottom types

--- a/docs/manual/accumulation-checker.tex
+++ b/docs/manual/accumulation-checker.tex
@@ -51,7 +51,8 @@ Also define top and bottom types, analogous to
 \<\$CHECKERFRAMEWORK/framework/src/test/java/testaccumulation/qual/TestAccumulationTop.java>
 and
 \<\$CHECKERFRAMEWORK/framework/src/test/java/testaccumulation/qual/TestAccumulationBottom.java>.
-
+Both should take no arguments. The top type should be a supertype of the accumulator annotation
+you defined earlier, and the bottom type should be a subtype of it.
 
 \paragraphAndLabel{Setting up the checker}{accumulation-setup}
 
