--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,6 @@
-Version ??, June 1, 2020
+---------------------------------------------------------------------------
+
+Version 3.5.0, June 1, 2020
 
 -Ainfer now takes an argument:
  * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
@@ -7,6 +9,13 @@ Version ??, June 1, 2020
 
 New command-line option:
   -AmergeStubsWithSource If both a stub file and a source file are available, use both.
+
+Renamed Signature Checker annoattions:
+  @BinaryNameInUnnamedPackage => @BinaryNameWithoutPackage
+  @FieldDescriptorForPrimitiveOrArrayInUnnamedPackage => @FieldDescriptorWithoutPackage
+  @IdentifierOrArray => @ArrayWithoutPackage
+
+---------------------------------------------------------------------------
 
 Version 3.4.0, May 3, 2020
 
