--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -141,7 +141,7 @@ command-line option.)
   that might clear one of the built-in properties.
 
   By default, the checker forbids calls to those methods, but also
-  special-cases typechecking of calls to
+  special-cases type-checking of calls to
   \sunjavadoc{java.base/java/lang/System.html\#getProperty(java.lang.String)}{System.getProperty(String)}
   A call to
   \sunjavadoc{java.base/java/lang/System.html\#getProperty(java.lang.String)}{System.getProperty(String)}
@@ -2037,4 +2037,5 @@ greater than the benefit from adopting the Freedom Before Commitment system.
 % LocalWords:  soundArrayCreationNullness lombok findbugs CurrentClass
 % LocalWords:  NotOnlyInitialized underinitialization Commitment'' toarray
 % LocalWords:  unclassified'' trustArrayLenZero ArrayLen toArray
-% LocalWords:  ConcurrentHashMap
+% LocalWords:  ConcurrentHashMap permitClearProperty setProperties
+% LocalWords:  clearProperty
