--- a/changelog.txt
+++ b/changelog.txt
@@ -10,7 +10,7 @@ Version 3.5.0, June 1, 2020
 New command-line option:
   -AmergeStubsWithSource If both a stub file and a source file are available, use both.
 
-Renamed Signature Checker annoattions:
+Renamed Signature Checker annotations:
   @BinaryNameInUnnamedPackage => @BinaryNameWithoutPackage
   @FieldDescriptorForPrimitiveOrArrayInUnnamedPackage => @FieldDescriptorWithoutPackage
   @IdentifierOrArray => @ArrayWithoutPackage
