--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
-Version ??, June 1, 2020
+Version 3.5.0, July 1, 2020
+
+The Nullness Checker now treats System.getProperty soundly.  Use
+-Alint=permitClearProperty to disable special treatment of System.getProperty
+and to permit undefining built-in system properties.
+
+---------------------------------------------------------------------------
+
+Version 3.4.1, June 1, 2020
 
 -Ainfer now takes an argument:
  * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
@@ -7,10 +15,6 @@ Version ??, June 1, 2020
 
 New command-line option:
   -AmergeStubsWithSource If both a stub file and a source file are available, use both.
-
-The Nullness Checker now treats System.getProperty soundly.  Use
--Alint=permitClearProperty to disable special treatment of System.getProperty
-and to permit undefining built-in system properties.
 
 ---------------------------------------------------------------------------
 
