--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -134,7 +134,7 @@ command-line option.)
 \begin{itemize}
 \item
   If you supply the \code{-Alint=permitClearProperty} command-line option,
-  then the checker permits calls to calls to
+  then the checker permits calls to
   \sunjavadoc{java.base/java/lang/System.html\#getProperties()}{System.setProperties()}
   and calls to
   \sunjavadoc{java.base/java/lang/System.html\#clearProperty()}{System.clearProperty()}
